# yeet

./: .dir-locals.el  .envrc  .gitignore  Cargo.toml  build.rs  changelog.md  flake.nix  readme.org  treefmt.nix  treefmt.toml
.github/workflows/: prerelease.yaml
crates/yeet/: Cargo.toml
crates/yeet/src/: lib.rs  main.rs
crates/yeet/src/io/: error.rs  exclude.rs  metadata.rs  mod.rs  progress.rs  reader.rs  work_simple.rs  work_tree.rs  writer.rs
crates/yeet/src/proto/: yeet.proto
crates/yeet/src/rpc/: yeet.rs
crates/yeet/src/systems/: build.rs  grpc.rs  heartbeat.rs  inode.rs  io_bridge.rs  loglevel.rs  mod.rs  monitor.rs  stats.rs  syncer.rs  tty.rs
crates/yeet/src/systems/netcode/: core.rs
crates/yeet/src/systems/ssh/: core.rs  state.rs
doc/adr/: 0001-record-architecture-decisions.md  0002-yeet-mvp.md
lib/: yeet.rs
nix/: basic.nix  integration-00-simple.nix  integration-10-ssh.nix  module.nix  readme.org  yeet_ssh_sut_key  yeet_ssh_sut_key.pub
proto/: yeet.proto
src/: lib.rs  main.rs  pid.rs  rpc.rs  systems.rs  yeet.rs
src/io/: progress.rs  work.rs  work_simple.rs  work_tree.rs
src/proto/: greeter.proto  loglevel.proto  syncer.proto  yeet.proto
src/rpc/: greeter.rs  loglevel.rs  yeet.rs
src/systems/: grpc.rs  grpcdaemon.rs  inode.rs  loglevel.rs  mod.rs  monitor.rs  protocol.rs  stats.rs  syncer.rs  sys.rs  tty.rs
src/systems/netcode/: client.rs  mod.rs  protocol.rs  server.rs
src/systems/ssh/: core.rs  forwarding.rs  mod.rs  pool.rs
