[package]
name = "yeet"
version = "0.1.0"
edition = "2024"
license = "Blue Oak Model License 1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "~4.5.48", features = ["derive"] }
humansize = "~2.1.3"
humantime = "~2.3.0"
log = "~0.4.28"
sysinfo = "~0.37.2"
thiserror = "~2.0.17"
# aya = { version = "0.13.1", features = ["async_tokio", "tokio"] }
uuid = { version = "~1.18.1", features = ["fast-rng", "v4"] }
prost = "~0.14"
tokio = { version = "~1.47", features = [
  "macros",
  "rt-multi-thread",
  "fs",
  "sync",
] }
tonic = { version = "~0.14.2", features = ["zstd"] }
tonic-prost = "~0.14.2"
# TODO: until upstream adds 0.17 support
bevy-tokio-tasks = "~0.16.0"
#bevy-tokio-tasks = { git = "file:///Users/mitch/src/pub/github.com/EkardNT/bevy-tokio-tasks", branch = "bevy-0.17" }
tap = "~1.0.1"
bevy_cronjob = "~0.6.1"
# bevy_cronjob = { git = "file:///Users/mitch/src/pub/github.com/foxzool/bevy_cronjob", branch = "bevy-0.17" }
tonic-reflection = "~0.14.2"
tokio-stream = { version = "0.1.17", features = ["fs"] }
eyre = "~0.6.12"
anyhow = "~1.0.100"
env_logger = "~0.11.8"
log-reload = "~0.1.3"
bevy = { version = "~0.16", default-features = false, features = [
  "libm",
  "async-io",
  "multi_threaded",
  "sysinfo_plugin",
  "bevy_log",
  "async_executor",
] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
crossterm = "0.29.0"
crossbeam-channel = "0.5.15"

[build-dependencies]
tonic-prost-build = "*"
tonic-build = "~0.14.2"
eyre = "~0.6.12"

[lib]
name = "lib"
path = "src/lib.rs"

# TODO test out client/server protocol
# [[bin]]
# name = "server"
# path = "src/server.rs"

# [[bin]]
# name = "client"
# path = "src/client.rs"

# Make dev profile fast but chonky boi files opt-level 0 is *slightly* faster,
# barely but its also murder on cpu caches.
#
# Given dev is more for rapid iteration with an eye on not being ass, give it
# minimal optimization.
[profile.dev]
opt-level = "z"

[profile.dev.build-override]
opt-level = "z"

[profile.dev.package."*"]
opt-level = "z"

# All this is great just slow af so turn on when needed.
[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"

[profile.release.build-override]
codegen-units = 1
opt-level = "z"
strip = "debuginfo"

[profile.release.package."*"]
codegen-units = 1
opt-level = "z"
strip = "debuginfo"
