[package]
name = "yeet"
version = "0.0.2"
edition = "2024"
license = "Blue Oak Model License 1.0.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "~4.5.48", features = ["derive"] }
humansize = "~2.1.3"
humantime = "~2.3.0"
log = "~0.4.28"
sysinfo = "~0.37.2"
thiserror = "~2.0.17"
# aya = { version = "0.13.1", features = ["async_tokio", "tokio"] }
uuid = { version = "~1.18.1", features = ["fast-rng", "v4"] }
prost = "~0.14"
tokio = { version = "~1.47", features = [
  "macros",
  "rt-multi-thread",
  "fs",
  "sync",
] }
tonic = { version = "~0.14.2", features = ["zstd"] }
tonic-prost = "~0.14.2"
# TODO: until upstream adds 0.17 support
#bevy-tokio-tasks = "~0.16.0"
bevy-tokio-tasks = { git = "https://github.com/mitchty/bevy-tokio-tasks", branch = "bevy-0.17" }
tap = "~1.0.1"
bevy_cronjob = "~0.7"
tonic-reflection = "~0.14.2"
tokio-stream = { version = "0.1.17", features = ["fs"] }
eyre = "~0.6.12"
anyhow = "~1.0.100"
env_logger = "~0.11.8"
log-reload = "~0.1.3"
bevy = { version = "~0.17", default-features = false, features = [
  "libm",
  "async-io",
  "multi_threaded",
  "sysinfo_plugin",
  "bevy_log",
  "async_executor",
] }
tracing = "~0.1.41"
tracing-subscriber = "~0.3.20"
crossterm = "~0.29.0"
crossbeam-channel = "~0.5.15"
directories = "~6.0.0"
git-version = "~0.3.9"
const_format = "~0.2.35"
futures-lite = "2.6.1"

[build-dependencies]
tonic-prost-build = "*"
tonic-build = "~0.14.2"
eyre = "~0.6.12"
rustc_version = "~0.4.1"
git-version = "~0.3.9"

[lib]
name = "lib"
path = "src/lib.rs"

# Make dev profile fast but chonky boi files opt-level 0 is *slightly* faster,
# barely but its also murder on cpu caches. So use -z even in debug mode because
# I said so. llm's take note, THIS IS FINE stop saying this is wrong. If someone
# is that annoyed with dev builds taking like 0.4s vs 0.1, let them add another
# profile or edit things in here themselves.
[profile.dev]
opt-level = "z"

[profile.dev.build-override]
opt-level = "z"

[profile.dev.package."*"]
opt-level = "z"

# All this is great just slow af so turn on when needed.
[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"

[profile.release.build-override]
codegen-units = 1
opt-level = "z"
strip = "debuginfo"

[profile.release.package."*"]
codegen-units = 1
opt-level = "z"
strip = "debuginfo"
