[package]
name = "yeet"
version = "0.0.2"
edition.workspace = true
license.workspace = true

# all the tonic/prost stuff is a false positive
[package.metadata.cargo-machete]
ignored = ["prost", "tonic-prost"]

[dependencies]
clap = { version = "~4.5.53", features = ["derive"] }
humansize = "~2.1.3"
humantime = "~2.3.0"
log = "~0.4.29"
sysinfo = { git = "https://github.com/GuillaumeGomez/sysinfo", tag = "v0.37.2" }
thiserror = "~2.0.17"
# aya = { version = "0.13.1", features = ["async_tokio", "tokio"] }
uuid = { version = "~1.18.1", features = ["fast-rng", "v4"] }
prost = "~0.14"
tokio = { version = "~1.48", features = [
  "macros",
  "rt-multi-thread",
  "fs",
  "sync",
] }
tonic = { version = "~0.14.2", features = ["zstd"] }
tonic-prost = "~0.14.2"
bevy-tokio-tasks = "~0.17.0"
#bevy-tokio-tasks = { git = "https://github.com/mitchty/bevy-tokio-tasks", branch = "bevy-0.17" }
tap = "~1.0.1"
tonic-reflection = "~0.14.2"
tokio-stream = { version = "0.1.17", features = ["fs"] }
eyre = "~0.6.12"
anyhow = "~1.0.100"
bevy = { version = "~0.17", default-features = false, features = [
  "libm",
  "async-io",
  "multi_threaded",
  #  "sysinfo_plugin", # FUTURE MITCH TASK maybe upstream the sysinfo stuff I've got so I can do more with bevy builtin sysinfo? They seem to conflict with each other.
  "bevy_log",
  "async_executor",
] }
tracing = "~0.1.43"
tracing-subscriber = "~0.3.22"
tracing-indicatif = "~0.3.14"
indicatif = "~0.18.3"
crossterm = "~0.29.0"
crossbeam-channel = "~0.5.15"
ctrlc = "~3.5.1"
directories = "~6.0.0"
git-version = "~0.3.9"
const_format = "~0.2.35"
futures-lite = "~2.6.1"
russh = "~0.55.0"
async-trait = "~0.1"
serde = { version = "~1.0", features = ["derive"] }
# Note metrics seems to include a gui component so no joy :(
lightyear = { version = "~0.25.5", default-features = false, features = [
  "server",
  "client",
  "replication",
  "crossbeam",
  "std",
  "netcode",
  "udp",
] }
ansi_term = "~0.12.1"
rand = "~0.9.2"
tower = "~0.5"
hyper-util = "~0.1"
parking_lot = "~0.12"

[target.'cfg(unix)'.dependencies]
libc = "~0.2"

[build-dependencies]
tonic-prost-build = "*"
tonic-build = "~0.14.2"
eyre = "~0.6.12"
rustc_version = "~0.4.1"
git-version = "~0.3.9"

[lib]
name = "lib"
path = "src/lib.rs"
